v0.17 - INPROGRESS

    - Added Transistor elements AnalogNFet, AnalogPFet, AnalogBiasedFet, and FetCurrentLabel

v0.16 - 25-Mar-2023

    - Added `canvas` parameter to Drawing and draw method, and deprecated `backend` parameter.
    - Removed `elements` argument from Drawing. Use Drawing.add_elements.
    - Added `Drawing.set_anchor` to define anchor points, useful for ElementDrawing instances.
    - Added shunt resistor symbol Rshunt
    - Fixed lead length of XOR gates to align with OR gates
    - Fixed greater and less than symbols in SVG backend
    - Fixed some anchor positions on flowchart symbols
    - Allow font parameter to be the path of a TTF file
    - Removed old deprecations
    - Replaced setup.py with setup.cfg


v0.15 - 20-Jun-2022

    - Added DSP elements Circulator, Isolator, VGA
    - Added ZLabel element for right-angle impedance arrow labels
    - Changed DSP anchor names from 'in' to 'input' to avoid conflict with 'in' keyword
    - Fixed styles with nested ElementDrawing elements
    - Fixed zorder of filled elements in Matplotlib backend
    - Added mathfont parameter to labels for specifying different font on math labels
    - Added padx and pady parameters to Encircle elements
    - Moved SVG backend configuration to svgconfig object and deprecated 'settextmode'.
    - Added 'visible' parameter to Segment objects 


v0.14 - 09-Jan-2022

    - Added context manager to Drawing class.
    - Added Wire element for quick 90-degree connections
    - Added Encircle, EncircleBox, and Annotate elements
    - Added Wheatstone, Rectifier, SparkGap elements
    - Added "2T" version of transistor elements for placement as as two-terminal elements
    - `tox` and `toy` methods automatically change drawing direction, removing need to specify `right()` and `tox()`, for example.
    - Added `istart` and `iend` anchors to 2-Terminal elements for defining inner start and end points before lead extensions